welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: not found: value estFace
    	estFace = estFaceMur()
        ^