welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while(estPositionFinale() == false) {
    avanceSerpent()
  }
  leveBrosse()
}

def estPositionFinale() : Boolean = {
  var estFaceNord : Boolean = false
  if(estFaceMur == true){
  	if (getDirection() == Direction.EST) {
    	gauche()
    	estFaceNord = estFaceMur()
    	droite()
  	}
  	if (getDirection() == Direction.OUEST) {
    	droite()
    	estFace = estFaceMur()
    	gauche()
  	}
  }
  return estFaceNord
}

def avanceSerpent() {
  if (estFaceMur == false) {
    avance()
  }
  else{
    if (getDirection() == Direction.EST) {
    	gauche()
    	avance()
    	gauche()
  }
  	if (getDirection() == Direction.OUEST) {
    	droite()
    	avance()
    	droite()
  }
  }
}